<resources>
    <string name="app_name">Healthcare</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="speciality">speciality</string>
    <string name="register">Register</string>
    <string name="address">Address</string>

    <string-array name="Title">
        <item>Nurse</item>
        <item>Physician</item>
        <item>Pharmacist</item>
        <item>Patient</item>
        <item>Admin</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>